--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch stickerGenerator",
+            "request": "launch",
+            "mainClass": "stickerGenerator",
+            "projectName": "alura-stickers_b1c58a61"
+        },
+        {
+            "type": "java",
             "name": "Launch App",
             "request": "launch",
             "mainClass": "App",
